// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`renderCompose golden snapshots (built-in catalog) postgres 1`] = `
"# Generated by LocaStack for stack "shop". Do not edit: changes are overwritten.
# Change the stack from the dashboard or its stack file instead.
name: "ls-shop"
services:
  postgres:
    image: "postgres:17-alpine"
    container_name: "ls-shop-postgres"
    restart: "unless-stopped"
    environment:
      POSTGRES_USER: "postgres"
      POSTGRES_PASSWORD: "\${LI_SECRET_POSTGRES__POSTGRES_PASSWORD}"
      POSTGRES_DB: "shop"
    ports:
      - "127.0.0.1:5433:5432"
    volumes:
      - "ls-shop-postgres-data:/var/lib/postgresql/data"
    healthcheck:
      test:
        - "CMD"
        - "pg_isready"
        - "-U"
        - "postgres"
        - "-d"
        - "shop"
      interval: "5s"
      retries: 10
    labels:
      locastack.stack: "shop"
      locastack.service: "postgres"
      locastack.instance: "postgres"
      locastack.type: "postgres"
      locastack.catalog-id: "postgres"
      locastack.version: "17"
    networks:
      - "ls-shop"
volumes:
  ls-shop-postgres-data:
    name: "ls-shop-postgres-data"
    labels:
      locastack.stack: "shop"
      locastack.service: "postgres"
      locastack.instance: "postgres"
      locastack.type: "postgres"
networks:
  ls-shop:
    name: "ls-shop"
    labels:
      locastack.stack: "shop"
"
`;

exports[`renderCompose golden snapshots (built-in catalog) redis 1`] = `
"# Generated by LocaStack for stack "shop". Do not edit: changes are overwritten.
# Change the stack from the dashboard or its stack file instead.
name: "ls-shop"
services:
  redis:
    image: "redis:7-alpine"
    container_name: "ls-shop-redis"
    restart: "unless-stopped"
    command:
      - "redis-server"
      - "--requirepass"
      - "\${LI_SECRET_REDIS__REDIS_PASSWORD}"
      - "--appendonly"
      - "yes"
    environment:
      REDISCLI_AUTH: "\${LI_SECRET_REDIS__REDIS_PASSWORD}"
    ports:
      - "127.0.0.1:6380:6379"
    volumes:
      - "ls-shop-redis-data:/data"
    healthcheck:
      test:
        - "CMD"
        - "redis-cli"
        - "ping"
      interval: "5s"
      retries: 10
    labels:
      locastack.stack: "shop"
      locastack.service: "redis"
      locastack.instance: "redis"
      locastack.type: "redis"
      locastack.catalog-id: "redis"
      locastack.version: "7"
    networks:
      - "ls-shop"
volumes:
  ls-shop-redis-data:
    name: "ls-shop-redis-data"
    labels:
      locastack.stack: "shop"
      locastack.service: "redis"
      locastack.instance: "redis"
      locastack.type: "redis"
networks:
  ls-shop:
    name: "ls-shop"
    labels:
      locastack.stack: "shop"
"
`;

exports[`renderCompose golden snapshots (built-in catalog) upstash-redis 1`] = `
"# Generated by LocaStack for stack "shop". Do not edit: changes are overwritten.
# Change the stack from the dashboard or its stack file instead.
name: "ls-shop"
services:
  redis:
    image: "redis:7-alpine"
    container_name: "ls-shop-redis"
    restart: "unless-stopped"
    command:
      - "redis-server"
      - "--requirepass"
      - "\${LI_SECRET_REDIS__REDIS_PASSWORD}"
      - "--appendonly"
      - "yes"
    environment:
      REDISCLI_AUTH: "\${LI_SECRET_REDIS__REDIS_PASSWORD}"
    ports:
      - "127.0.0.1:6380:6379"
    volumes:
      - "ls-shop-redis-data:/data"
    healthcheck:
      test:
        - "CMD"
        - "redis-cli"
        - "ping"
      interval: "5s"
      retries: 10
    labels:
      locastack.stack: "shop"
      locastack.service: "redis"
      locastack.instance: "redis"
      locastack.type: "redis"
      locastack.catalog-id: "redis"
      locastack.version: "7"
    networks:
      - "ls-shop"
  upstash-redis:
    image: "hiett/serverless-redis-http:latest"
    container_name: "ls-shop-upstash-redis"
    restart: "unless-stopped"
    environment:
      SRH_MODE: "env"
      SRH_TOKEN: "\${LI_SECRET_UPSTASH_REDIS__SRH_TOKEN}"
      SRH_CONNECTION_STRING: "redis://:\${LI_SECRET_REDIS__REDIS_PASSWORD}@redis:6379"
    ports:
      - "127.0.0.1:8080:80"
    healthcheck:
      test:
        - "CMD"
        - "nc"
        - "-z"
        - "127.0.0.1"
        - "80"
      interval: "5s"
      retries: 10
      start_period: "5s"
    depends_on:
      redis:
        condition: "service_healthy"
    labels:
      locastack.stack: "shop"
      locastack.service: "upstash-redis"
      locastack.instance: "upstash-redis"
      locastack.type: "upstash-redis"
      locastack.catalog-id: "upstash-redis"
      locastack.version: "latest"
    networks:
      - "ls-shop"
volumes:
  ls-shop-redis-data:
    name: "ls-shop-redis-data"
    labels:
      locastack.stack: "shop"
      locastack.service: "redis"
      locastack.instance: "redis"
      locastack.type: "redis"
networks:
  ls-shop:
    name: "ls-shop"
    labels:
      locastack.stack: "shop"
"
`;

exports[`renderCompose golden snapshots (built-in catalog) named instances: two postgres (one ephemeral), redis, upstash via uses 1`] = `
"# Generated by LocaStack for stack "shop". Do not edit: changes are overwritten.
# Change the stack from the dashboard or its stack file instead.
name: "ls-shop"
services:
  main-db:
    image: "postgres:17-alpine"
    container_name: "ls-shop-main-db"
    restart: "unless-stopped"
    environment:
      POSTGRES_USER: "postgres"
      POSTGRES_PASSWORD: "\${LI_SECRET_MAIN_DB__POSTGRES_PASSWORD}"
      POSTGRES_DB: "shop"
    ports:
      - "127.0.0.1:5433:5432"
    volumes:
      - "ls-shop-main-db-data:/var/lib/postgresql/data"
    healthcheck:
      test:
        - "CMD"
        - "pg_isready"
        - "-U"
        - "postgres"
        - "-d"
        - "shop"
      interval: "5s"
      retries: 10
    labels:
      locastack.stack: "shop"
      locastack.service: "main-db"
      locastack.instance: "main-db"
      locastack.type: "postgres"
      locastack.catalog-id: "postgres"
      locastack.version: "17"
    networks:
      - "ls-shop"
  events:
    image: "postgres:17-alpine"
    container_name: "ls-shop-events"
    restart: "unless-stopped"
    environment:
      POSTGRES_USER: "postgres"
      POSTGRES_PASSWORD: "\${LI_SECRET_EVENTS__POSTGRES_PASSWORD}"
      POSTGRES_DB: "shop"
    ports:
      - "127.0.0.1:5434:5432"
    healthcheck:
      test:
        - "CMD"
        - "pg_isready"
        - "-U"
        - "postgres"
        - "-d"
        - "shop"
      interval: "5s"
      retries: 10
    labels:
      locastack.stack: "shop"
      locastack.service: "events"
      locastack.instance: "events"
      locastack.type: "postgres"
      locastack.catalog-id: "postgres"
      locastack.version: "17"
    networks:
      - "ls-shop"
  cache:
    image: "redis:7-alpine"
    container_name: "ls-shop-cache"
    restart: "unless-stopped"
    command:
      - "redis-server"
      - "--requirepass"
      - "\${LI_SECRET_CACHE__REDIS_PASSWORD}"
      - "--appendonly"
      - "yes"
    environment:
      REDISCLI_AUTH: "\${LI_SECRET_CACHE__REDIS_PASSWORD}"
    ports:
      - "127.0.0.1:6380:6379"
    volumes:
      - "ls-shop-cache-data:/data"
    healthcheck:
      test:
        - "CMD"
        - "redis-cli"
        - "ping"
      interval: "5s"
      retries: 10
    labels:
      locastack.stack: "shop"
      locastack.service: "cache"
      locastack.instance: "cache"
      locastack.type: "redis"
      locastack.catalog-id: "redis"
      locastack.version: "7"
    networks:
      - "ls-shop"
  rest:
    image: "hiett/serverless-redis-http:latest"
    container_name: "ls-shop-rest"
    restart: "unless-stopped"
    environment:
      SRH_MODE: "env"
      SRH_TOKEN: "\${LI_SECRET_REST__SRH_TOKEN}"
      SRH_CONNECTION_STRING: "redis://:\${LI_SECRET_CACHE__REDIS_PASSWORD}@cache:6379"
    ports:
      - "127.0.0.1:8080:80"
    healthcheck:
      test:
        - "CMD"
        - "nc"
        - "-z"
        - "127.0.0.1"
        - "80"
      interval: "5s"
      retries: 10
      start_period: "5s"
    depends_on:
      cache:
        condition: "service_healthy"
    labels:
      locastack.stack: "shop"
      locastack.service: "rest"
      locastack.instance: "rest"
      locastack.type: "upstash-redis"
      locastack.catalog-id: "upstash-redis"
      locastack.version: "latest"
    networks:
      - "ls-shop"
volumes:
  ls-shop-main-db-data:
    name: "ls-shop-main-db-data"
    labels:
      locastack.stack: "shop"
      locastack.service: "main-db"
      locastack.instance: "main-db"
      locastack.type: "postgres"
  ls-shop-cache-data:
    name: "ls-shop-cache-data"
    labels:
      locastack.stack: "shop"
      locastack.service: "cache"
      locastack.instance: "cache"
      locastack.type: "redis"
networks:
  ls-shop:
    name: "ls-shop"
    labels:
      locastack.stack: "shop"
"
`;

exports[`renderCompose golden snapshots (built-in catalog) named instances: two postgres (one ephemeral), redis, upstash via uses 2`] = `
"# Generated by LocaStack: secrets for docker compose interpolation. Do not commit.
LI_SECRET_MAIN_DB__POSTGRES_PASSWORD=mainDbSecret_0123456789abcdefghijklmnopq
LI_SECRET_EVENTS__POSTGRES_PASSWORD=eventsSecret_0123456789abcdefghijklmnopq
LI_SECRET_CACHE__REDIS_PASSWORD=cacheSecret_0123456789abcdefghijklmnopqr
LI_SECRET_REST__SRH_TOKEN=restToken_0123456789abcdefghijklmnopqrstu
"
`;

exports[`renderCompose golden snapshots (built-in catalog) seed file: read-only bind mount after the data volume ($ escaped) 1`] = `
"# Generated by LocaStack for stack "shop". Do not edit: changes are overwritten.
# Change the stack from the dashboard or its stack file instead.
name: "ls-shop"
services:
  main-db:
    image: "postgres:17-alpine"
    container_name: "ls-shop-main-db"
    restart: "unless-stopped"
    environment:
      POSTGRES_USER: "postgres"
      POSTGRES_PASSWORD: "\${LI_SECRET_MAIN_DB__POSTGRES_PASSWORD}"
      POSTGRES_DB: "shop"
    ports:
      - "127.0.0.1:5433:5432"
    volumes:
      - "ls-shop-main-db-data:/var/lib/postgresql/data"
      - type: "bind"
        source: "/work/shop$$app/db/seed.sql"
        target: "/docker-entrypoint-initdb.d/seed.sql"
        read_only: true
        bind:
          create_host_path: false
    healthcheck:
      test:
        - "CMD"
        - "pg_isready"
        - "-U"
        - "postgres"
        - "-d"
        - "shop"
      interval: "5s"
      retries: 10
    labels:
      locastack.stack: "shop"
      locastack.service: "main-db"
      locastack.instance: "main-db"
      locastack.type: "postgres"
      locastack.catalog-id: "postgres"
      locastack.version: "17"
    networks:
      - "ls-shop"
  events:
    image: "postgres:17-alpine"
    container_name: "ls-shop-events"
    restart: "unless-stopped"
    environment:
      POSTGRES_USER: "postgres"
      POSTGRES_PASSWORD: "\${LI_SECRET_EVENTS__POSTGRES_PASSWORD}"
      POSTGRES_DB: "shop"
    ports:
      - "127.0.0.1:5434:5432"
    volumes:
      - type: "bind"
        source: "/work/shop$$app/db/events.sql"
        target: "/docker-entrypoint-initdb.d/seed.sql"
        read_only: true
        bind:
          create_host_path: false
    healthcheck:
      test:
        - "CMD"
        - "pg_isready"
        - "-U"
        - "postgres"
        - "-d"
        - "shop"
      interval: "5s"
      retries: 10
    labels:
      locastack.stack: "shop"
      locastack.service: "events"
      locastack.instance: "events"
      locastack.type: "postgres"
      locastack.catalog-id: "postgres"
      locastack.version: "17"
    networks:
      - "ls-shop"
  cache:
    image: "redis:7-alpine"
    container_name: "ls-shop-cache"
    restart: "unless-stopped"
    command:
      - "redis-server"
      - "--requirepass"
      - "\${LI_SECRET_CACHE__REDIS_PASSWORD}"
      - "--appendonly"
      - "yes"
    environment:
      REDISCLI_AUTH: "\${LI_SECRET_CACHE__REDIS_PASSWORD}"
    ports:
      - "127.0.0.1:6380:6379"
    volumes:
      - "ls-shop-cache-data:/data"
    healthcheck:
      test:
        - "CMD"
        - "redis-cli"
        - "ping"
      interval: "5s"
      retries: 10
    labels:
      locastack.stack: "shop"
      locastack.service: "cache"
      locastack.instance: "cache"
      locastack.type: "redis"
      locastack.catalog-id: "redis"
      locastack.version: "7"
    networks:
      - "ls-shop"
volumes:
  ls-shop-main-db-data:
    name: "ls-shop-main-db-data"
    labels:
      locastack.stack: "shop"
      locastack.service: "main-db"
      locastack.instance: "main-db"
      locastack.type: "postgres"
  ls-shop-cache-data:
    name: "ls-shop-cache-data"
    labels:
      locastack.stack: "shop"
      locastack.service: "cache"
      locastack.instance: "cache"
      locastack.type: "redis"
networks:
  ls-shop:
    name: "ls-shop"
    labels:
      locastack.stack: "shop"
"
`;
